sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:8: error: reassignment to val
      i=i-1
       ^AlgGnomeSort:10: error: reassignment to val
    if (i=l){
         ^